--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     />
     <link rel="stylesheet" href="styles/portfolio.css" />
     <!-- font awesome kit -->
-    <script src="https://kit.fontawesome.com/2ab918b31c.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/2ab918b31c.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body class="open-sans-normal">
@@ -35,8 +38,13 @@
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-          <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button> &nbsp; &nbsp;
-          <button class="btn-hover"><i class="fa-solid fa-phone"></i> Contact</button>
+          <button class="btn-primary">
+            <i class="fa-solid fa-download"></i> Download CV
+          </button>
+          &nbsp; &nbsp;
+          <button class="btn-hover">
+            <i class="fa-solid fa-phone"></i> Contact
+          </button>
         </div>
         <img class="banner-profile-pic" src="./images/hardy.png" alt="" />
       </div>
@@ -208,14 +216,43 @@
               </div>
             </div>
           </div>
-          
         </div>
         <div class="text-center">
-          <button class="btn-primary text-center"><i class="fa-solid fa-download"></i> Download CV</button>
+          <button class="btn-primary text-center">
+            <i class="fa-solid fa-download"></i> Download CV
+          </button>
         </div>
       </section>
     </main>
 
-    <footer></footer>
+    <footer class="secondary-bg">
+      <div class="footer-column">
+        <h3 class="section-title">Lets Connect</h3>
+        <p class="dark-2">
+          Please fill out the form on this section to contact with me or call
+          between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+        </p>
+        <div class="social-icon">
+          <a href=""><img src="./images/icons/facebook.png" alt="" /></a>
+          <a href=""><img src="./images/icons/twitter.png" alt="" /></a>
+          <a href=""><img src="./images/icons/insta.png" alt="" /></a>
+        </div>
+      </div>
+      <div class="footer-column">
+        <h3 class="section-title">Let’s Message me</h3>
+        <form action="">
+          <input type="text" name="" id="" placeholder="Your Name" />
+          <input type="email" name="" id="" placeholder="Your Email" />
+          <textarea
+            name=""
+            id=""
+            cols="20"
+            rows="10"
+            placeholder="Message"
+          ></textarea>
+          <input class="btn-primary" type="submit" value="Submit" />
+        </form>
+      </div>
+    </footer>
   </body>
 </html>
